# circe

./: Cargo.toml  readme.md
src/: circe.rs  lib.rs  main.rs  position.rs  weather.rs
