[package]
name = "circe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.2"
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_with = "3.0.0"
term-table = "1.3.2"
tokio = { version = "1.28.1", features = ["full"] }
